Transferred from the Adobe Open Source Subversion Repository
Revision: 20730
Author:   cframpto@adobe.com
Date:     2011-03-09T20:27:26.668138Z

Log Message: 
-----------
Merge 20714 and 20715 from hero_private to private trunk.

Revision: 20714
Exclude all text styles that do not have an effect on either UIFTETextField or FTETextField.  Some of the styles are hard-coded by FTETextField.  Some of the styles aren't suportted because, even though FTE supports them, they aren't in the TextField interface.

Revision: 20715
More changes to get these examples to layout correctly in ASdoc.

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DataGridMasterDetailExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/skins/spark/examples/DefaultGridItemRendererExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/DefaultGridItemRenderer.as</path>
<path kind="dir" action="M">/private/flex/sdk/trunk</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274964 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/DataGridMasterDetailExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DataGridMasterDetailExample.mxml
@@ -53,30 +53,34 @@ and localized strings.
                 </s:ArrayCollection>
             </s:DataGrid>
             
-            <s:Form height="100%">
-                <s:FormHeading label="Selected Product Detail" textAlign="center"/>            
-                <s:FormItem label="Product Key:">
-                    <s:Label text="{dataGrid.selectedItem.key}"/>
-                </s:FormItem>
-                <s:FormItem label="Product Name:">
-                    <s:Label text="{dataGrid.selectedItem.name}"/>
-                </s:FormItem>
-                <s:FormItem label="Product Price:">
-                    <s:HGroup verticalAlign="baseline">
-                        <s:Label text="{cf.format(dataGrid.selectedItem.price)}"/>
-                        <s:Label text="Tax: {cf.format(dataGrid.selectedItem.price * 0.0975)}"/>
-                        <s:Label text="Total: {cf.format(dataGrid.selectedItem.price * 1.0975)}"/>
-                    </s:HGroup>
-                </s:FormItem>              
-                <s:FormItem label="Followup Needed:">
-                    <s:HGroup verticalAlign="baseline">
-                        <s:Label text="{(dataGrid.selectedItem.call) ? 'Yes' : 'No'}"/>
-                        <s:Button label="Call Now"
-                                  enabled="{dataGrid.selectedItem.call}"
-                                  click="dataGrid.selectedItem.call=false"/>
-                    </s:HGroup>                              
-                </s:FormItem>            
-            </s:Form>
+            <s:Scroller height="100%">
+                <s:Group>
+                    <s:Form width="100%" height="100%">
+                        <s:FormHeading label="Selected Product Detail" textAlign="center"/>            
+                        <s:FormItem label="Product Key:">
+                            <s:Label text="{dataGrid.selectedItem.key}"/>
+                        </s:FormItem>
+                        <s:FormItem label="Product Name:">
+                            <s:Label text="{dataGrid.selectedItem.name}"/>
+                        </s:FormItem>
+                        <s:FormItem label="Product Price:">
+                            <s:HGroup verticalAlign="baseline">
+                                <s:Label text="{cf.format(dataGrid.selectedItem.price)}"/>
+                                <s:Label text="Tax: {cf.format(dataGrid.selectedItem.price * 0.0975)}"/>
+                                <s:Label text="Total: {cf.format(dataGrid.selectedItem.price * 1.0975)}"/>
+                            </s:HGroup>
+                        </s:FormItem>              
+                        <s:FormItem label="Followup Needed:" >
+                            <s:HGroup verticalAlign="baseline">
+                                <s:Label text="{(dataGrid.selectedItem.call) ? 'Yes' : 'No'}"/>
+                                <s:Button label="Call Now"
+                                          enabled="{dataGrid.selectedItem.call}"
+                                          click="dataGrid.selectedItem.call=false"/>
+                            </s:HGroup>                              
+                        </s:FormItem>            
+                    </s:Form>
+                </s:Group>
+            </s:Scroller>
         </s:VGroup>
     </s:Panel>
 </s:Application>
