Transferred from the Adobe Open Source Subversion Repository
Revision: 20425
Author:   cframpto@adobe.com
Date:     2011-02-23T19:10:00.160547Z

Log Message: 
-----------
Fixup some of the DataGrid example programs.  The DG needs to be constrained on the top and bottom as well as the left and right so it doesn't leak out of the Panel when displayed by ASdocs.

QE notes: 
Doc notes: 
Bugs: 
Reviewer: 
Tests run: hand-compiled and ran all these examples
Is noteworthy for integration:

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DataGridSelectionExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/components/gridClasses/examples/GridColumnExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/components/gridClasses/examples/GridColumnVisibilityExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DataGridRowHeightExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DataGridTypicalItemExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274972 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/DataGridSelectionExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DataGridSelectionExample.mxml
@@ -145,7 +145,7 @@ Vector of CellPosition objects.
                      text="Selected Cells: minimum = {selectionMinimum}, maximum = {selectionMaximum}, average = {selectionAverage}"/>
         </s:controlBarContent>
 
-        <s:DataGrid id="dataGrid" left="5" right="5"
+        <s:DataGrid id="dataGrid" left="5" right="5" top="5" bottom="5"
                 alternatingRowColors="[0xFFFFFF, 0xEDFFE9]"
                 selectionMode="multipleCells"
                 valueCommit="selectionChangeHandler()"
