--- a/projects/spark/asdoc/en_US/spark/components/examples/DataGridTypicalItemExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DataGridTypicalItemExample.mxml
@@ -34,6 +34,7 @@ In this example each input field calls invalidateTypicalItem() when a typicalIte
     <s:Panel title="Spark DataGrid Control Example that demonstrates using the typicalItem property to size the DataGrid"
              width="75%" height="75%" 
              horizontalCenter="0" verticalCenter="0">
+        
         <s:controlBarContent>
             <s:VGroup paddingTop="10" paddingBottom="10">
                 <s:Label text="Typical Item:" fontWeight="bold" />
@@ -56,7 +57,8 @@ In this example each input field calls invalidateTypicalItem() when a typicalIte
             </s:VGroup>
         </s:controlBarContent>
         
-        <s:DataGrid id="dataGrid" requestedRowCount="5" verticalCenter="0" horizontalCenter="0">
+        <s:DataGrid id="dataGrid" left="5" right="5" top="5" bottom="5"
+                    requestedRowCount="5">
             <!--
                 The typicalItem defines the width of each column.  We also insert it at rowIndex=0
                 (see applicationComplete above) to help visualize the impact of typicalItem changes.
