--- a/projects/spark/asdoc/en_US/spark/components/examples/DataGroupExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DataGroupExample.mxml
@@ -33,9 +33,9 @@
                 </s:layout>
                 <s:dataProvider>
                     <s:ArrayCollection>
-                        <s:String>primitive data 1</s:String>
-                        <s:String>primitive data 2</s:String>
-                        <s:String>primitive data 3</s:String>
+                        <fx:String>primitive data 1</fx:String>
+                        <fx:String>primitive data 2</fx:String>
+                        <fx:String>primitive data 3</fx:String>
                     </s:ArrayCollection>
                 </s:dataProvider>
             </s:DataGroup>
@@ -51,7 +51,7 @@
                 <s:dataProvider>
                     <s:ArrayCollection>
                         <s:Button label="Button 1" />
-                        <s:String>primitive data string</s:String>
+                        <fx:String>primitive data string</fx:String>
                         <s:Button label="Button 2" />
                     </s:ArrayCollection>
                 </s:dataProvider>
