Transferred from the Adobe Open Source Subversion Repository
Revision: 7851
Author:   gruehle@adobe.com
Date:     2009-06-15T20:34:00.819406Z

Log Message: 
-----------
Move spark.skins.default.* to spark.skins.spark.*.

Updated wireframe skins and flex4test files. The testWheel app has a compile error, but that is due to unrelated Vector changes.

Reviewer: Jason
Tests: checkintests, flex4test

Modified Paths:
--------------
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/DefaultItemRenderer.mxml" copyfrom-rev="7848" action="R">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/spark/DefaultItemRenderer.mxml</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VSliderSkin.mxml" copyfrom-rev="7848" action="R">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/spark/VSliderSkin.mxml</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/SkinnableContainerSkin.mxml" copyfrom-rev="7848" action="R">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/spark/SkinnableContainerSkin.mxml</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VScrollBarSkin.mxml" copyfrom-rev="7848" action="R">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/spark/VScrollBarSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/wireframe/src/spark/skins/wireframe/ListSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/ButtonBarButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/spark/mediaClasses/normal/VolumeBarSkin.mxml</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/DropDownListSkin.mxml" copyfrom-rev="7848" action="R">/flex/sdk/trunk/frameworks/projects/flex4/src/spar

--- a/projects/spark/asdoc/en_US/spark/components/examples/DataGroupExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DataGroupExample.mxml
@@ -7,8 +7,8 @@
     <fx:Script>
         <![CDATA[
             // need to import the item renderers
-            import spark.skins.default.DefaultItemRenderer;
-            import spark.skins.default.DefaultComplexItemRenderer;
+            import spark.skins.spark.DefaultItemRenderer;
+            import spark.skins.spark.DefaultComplexItemRenderer;
             import spark.components.Button;
 
             public function customItemRendererFunction(item:*):IFactory {
@@ -27,7 +27,7 @@
         <s:VGroup left="10" right="10" top="10" bottom="10">
             <!-- A DataGroup can hold primitive data items if an 
                  item renderer is defined. -->
-            <s:DataGroup itemRenderer="spark.skins.default.DefaultItemRenderer">
+            <s:DataGroup itemRenderer="spark.skins.spark.DefaultItemRenderer">
                 <s:layout>
                     <s:VerticalLayout gap="1" />
                 </s:layout>
