Transferred from the Adobe Open Source Subversion Repository
Revision: 6275
Author:   stshongr@adobe.com
Date:     2009-04-26T01:46:37.888773Z

Log Message: 
-----------
Updating DataGroup virtualization example for Animation API change

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/DataGroupVirtualizationExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274989 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/DataGroupVirtualizationExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DataGroupVirtualizationExample.mxml
@@ -47,12 +47,12 @@
 						<s:transitions>
 							<mx:Transition fromState="normal" toState="hovered">
 								<s:Animate target="{plan}" duration="200">
-									<s:AnimationProperty property="width" />
+									<s:SimpleMotionPath property="width" />
 								</s:Animate>
 							</mx:Transition>
 							<mx:Transition fromState="hovered" toState="normal">
 								<s:Animate target="{plan}" duration="200" >
-									<s:AnimationProperty property="width" />
+									<s:SimpleMotionPath property="width" />
 								</s:Animate>
 							</mx:Transition>
 						</s:transitions>
